--- a/index.html
+++ b/index.html
@@ -4,30 +4,77 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Orçamento StreamerPRO</title>
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: #0e0e0e;
       color: #fff;
-      font-family: Arial, sans-serif;
+      font-family: 'Rajdhani', sans-serif;
       padding: 20px;
+      text-transform: uppercase;
     }
     h1 {
       color: #00ffd5;
+      font-size: 2.5em;
+      text-shadow: 0 0 10px #00ffd5;
+      font-weight: 700;
+      border: 2px solid #00ffd5;
+      padding: 10px;
+      display: inline-block;
+    }
+    h2 {
+      color: #00ffd5;
+      font-weight: bold;
+      border-left: 4px solid #00ffd5;
+      padding-left: 10px;
+      margin-top: 30px;
     }
     .section {
       margin-bottom: 30px;
     }
     .item {
       margin: 5px 0;
+      font-weight: bold;
     }
     input[type="number"] {
       width: 60px;
       margin-left: 10px;
+      background: #222;
+      color: #0f0;
+      border: 1px solid #00ffd5;
+      font-weight: bold;
     }
     .total {
-      font-size: 1.5em;
+      font-size: 1.8em;
       margin-top: 20px;
       color: #00ff88;
+      text-shadow: 0 0 10px #00ff88;
+      font-weight: bold;
+      border-top: 2px solid #00ff88;
+      padding-top: 10px;
+    }
+    .buttons {
+      margin-top: 20px;
+    }
+    .buttons button {
+      background: linear-gradient(to right, #00ffd5, #00ff88);
+      border: none;
+      padding: 10px 20px;
+      margin-right: 10px;
+      font-size: 1em;
+      cursor: pointer;
+      border-radius: 8px;
+      color: #000;
+      box-shadow: 0 0 10px #00ffd5;
+      transition: transform 0.2s;
+      font-weight: bold;
+    }
+    .buttons button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 20px #00ffd5;
+    }
+    input[type="checkbox"] {
+      accent-color: #00ffd5;
     }
   </style>
 </head>
@@ -35,53 +82,58 @@
   <h1>Orçamento StreamerPRO</h1>
 
   <form id="budget-form">
-    <div class="section">
-      <h2>Serviços Genéricos</h2>
-      <div class="item"><label><input type="checkbox" data-price="200"> Identidade visual - R$200</label></div>
-      <div class="item"><label><input type="checkbox" data-price="75"> Banners - R$75</label></div>
-      <div class="item"><label><input type="checkbox" data-price="150"> Mascote/Avatar - R$150</label></div>
-      <div class="item"><label><input type="checkbox" data-price="120"> Logo Animada - R$120</label></div>
-    </div>
+  <div class="section">
+    <h2>Serviços Genéricos</h2>
+    <div class="item"><label><input type="checkbox" data-price="200"> Identidade visual - R$200</label></div>
+    <div class="item"><label><input type="checkbox" data-price="75"> Banners - R$75</label></div>
+    <div class="item"><label><input type="checkbox" data-price="150"> Mascote/Avatar - R$150</label></div>
+    <div class="item"><label><input type="checkbox" data-price="120"> Logo Animada - R$120</label></div>
+  </div>
 
-    <div class="section">
-      <h2>Personalização da Live (estático)</h2>
-      <div class="item"><label><input type="checkbox" data-price="75"> Overlay Webcam - R$75</label></div>
-      <div class="item"><label><input type="checkbox" data-price="50"> Overlay Handcam - R$50</label></div>
-      <div class="item"><label><input type="checkbox" data-price="100"> Tela de iniciando - R$100</label></div>
-      <div class="item"><label><input type="checkbox" data-price="50"> Tela de espera - R$50</label></div>
-      <div class="item"><label><input type="checkbox" data-price="50"> Tela de finalização - R$50</label></div>
-      <div class="item"><label><input type="checkbox" data-price="75"> Tela Just Chatting - R$75</label></div>
-    </div>
+  <div class="section">
+    <h2>Personalização da Live (estático)</h2>
+    <div class="item"><label><input type="checkbox" data-price="75"> Overlay Webcam - R$75</label></div>
+    <div class="item"><label><input type="checkbox" data-price="50"> Overlay Handcam - R$50</label></div>
+    <div class="item"><label><input type="checkbox" data-price="100"> Tela de iniciando - R$100</label></div>
+    <div class="item"><label><input type="checkbox" data-price="50"> Tela de espera - R$50</label></div>
+    <div class="item"><label><input type="checkbox" data-price="50"> Tela de finalização - R$50</label></div>
+    <div class="item"><label><input type="checkbox" data-price="75"> Tela Just Chatting - R$75</label></div>
+  </div>
 
-    <div class="section">
-      <h2>Personalização da Live (animado)</h2>
-      <div class="item"><label><input type="checkbox" data-price="100"> Overlay Webcam - R$100</label></div>
-      <div class="item"><label><input type="checkbox" data-price="75"> Overlay Handcam - R$75</label></div>
-      <div class="item"><label><input type="checkbox" data-price="120"> Tela de iniciando - R$120</label></div>
-      <div class="item"><label><input type="checkbox" data-price="75"> Tela de espera - R$75</label></div>
-      <div class="item"><label><input type="checkbox" data-price="75"> Tela de finalização - R$75</label></div>
-      <div class="item"><label><input type="checkbox" data-price="100"> Tela Just Chatting - R$100</label></div>
-    </div>
+  <div class="section">
+    <h2>Personalização da Live (animado)</h2>
+    <div class="item"><label><input type="checkbox" data-price="100"> Overlay Webcam - R$100</label></div>
+    <div class="item"><label><input type="checkbox" data-price="75"> Overlay Handcam - R$75</label></div>
+    <div class="item"><label><input type="checkbox" data-price="120"> Tela de iniciando - R$120</label></div>
+    <div class="item"><label><input type="checkbox" data-price="75"> Tela de espera - R$75</label></div>
+    <div class="item"><label><input type="checkbox" data-price="75"> Tela de finalização - R$75</label></div>
+    <div class="item"><label><input type="checkbox" data-price="100"> Tela Just Chatting - R$100</label></div>
+  </div>
 
-    <div class="section">
-      <h2>Subs/Membros (estático)</h2>
-      <div class="item">Distintivos de inscritos (mínimo 3) - R$20 cada: <input type="number" data-unit="20" min="3" value="0"></div>
-      <div class="item">Emotes personalizados (mínimo 4) - R$15 cada: <input type="number" data-unit="15" min="4" value="0"></div>
-    </div>
+  <div class="section">
+    <h2>Subs/Membros (estático)</h2>
+    <div class="item">Distintivos de inscritos (mínimo 3) - R$20 cada: <input type="number" data-unit="20" value="0"></div>
+    <div class="item">Emotes personalizados (mínimo 4) - R$15 cada: <input type="number" data-unit="15" value="0"></div>
+  </div>
 
-    <div class="section">
-      <h2>Subs/Membros (animado)</h2>
-      <div class="item">Emotes personalizados (mínimo 3) - R$30 cada: <input type="number" data-unit="30" min="3" value="0"></div>
-    </div>
+  <div class="section">
+    <h2>Subs/Membros (animado)</h2>
+    <div class="item">Emotes personalizados (mínimo 3) - R$30 cada: <input type="number" data-unit="30" value="0"></div>
+  </div>
 
-    <div class="section">
-      <h2>Alertas personalizáveis</h2>
-      <div class="item"><label><input type="checkbox" data-price="75"> Estático - R$75</label></div>
-      <div class="item"><label><input type="checkbox" data-price="100"> Animado - R$100</label></div>
-    </div>
+  <div class="section">
+    <h2>Alertas personalizáveis</h2>
+    <div class="item"><label><input type="checkbox" data-price="75"> Novo seguidor, sub, donate e raid (estático) - R$75</label></div>
+    <div class="item"><label><input type="checkbox" data-price="100"> Novo seguidor, sub, donate e raid (animado) - R$100</label></div>
+  </div>
 
-    <div class="total" id="total">Total: R$0</div>
-  </form>
+  <div class="total" id="total">Total: R$0</div>
+
+  <div class="buttons">
+    <button type="button" onclick="copyOrcamento()">Copiar Orçamento</button>
+    <button type="button" onclick="exportarPDF()">Exportar PDF</button>
+  </div>
+</form>
 
   <script>
     const checkboxes = document.querySelectorAll('input[type="checkbox"]');
@@ -97,17 +149,48 @@
       });
       numbers.forEach(num => {
         const val = parseInt(num.value);
-        const min = parseInt(num.min);
         const unit = parseFloat(num.dataset.unit);
-        if (val >= min) {
+        if (!isNaN(val) && val > 0) {
           total += val * unit;
         }
       });
       totalEl.textContent = `Total: R$${total}`;
     }
 
+    function copyOrcamento() {
+      let text = '';
+      checkboxes.forEach(cb => {
+        if (cb.checked) {
+          text += '- ' + cb.parentElement.textContent.trim() + '\n';
+        }
+      });
+      numbers.forEach(num => {
+        const val = parseInt(num.value);
+        const unit = parseFloat(num.dataset.unit);
+        if (!isNaN(val) && val > 0) {
+          const label = num.parentElement.textContent.trim().split(':')[0];
+          text += `- ${label}: ${val} x R$${unit} = R$${val * unit}\n`;
+        }
+      });
+      text += '\n' + totalEl.textContent;
+      navigator.clipboard.writeText(text).then(() => {
+        alert('Orçamento copiado para a área de transferência!');
+      });
+    }
+
+    function exportarPDF() {
+      window.print();
+    }
+
     checkboxes.forEach(cb => cb.addEventListener('change', calculateTotal));
-    numbers.forEach(num => num.addEventListener('input', calculateTotal));
+    numbers.forEach(num => {
+      num.addEventListener('input', calculateTotal);
+      num.addEventListener('change', () => {
+        if (num.value < 0) num.value = 0;
+        calculateTotal();
+      });
+    });
   </script>
 </body>
 </html>
+atualizando layout
