--- a/index.html
+++ b/index.html
@@ -130,9 +130,10 @@
   <div class="total" id="total">Total: R$0</div>
 
   <div class="buttons">
-    <button type="button" onclick="copyOrcamento()">Copiar Orçamento</button>
-    <button type="button" onclick="exportarPDF()">Exportar PDF</button>
-  </div>
+  <button type="button" onclick="copyOrcamento()">Copiar Orçamento</button>
+  <button type="button" onclick="exportarPDF()">Exportar PDF</button>
+  <button type="button" onclick="window.open('https://discord.com/users/donmarco_versatil', '_blank')">Contato via Discord</button>
+</div>
 </form>
 
   <script>
@@ -193,4 +194,3 @@
   </script>
 </body>
 </html>
-
